changed facility nav bar

--- a/Facilities.html
+++ b/Facilities.html
@@ -8,6 +8,7 @@
 	<title>Lavista Sri Lanka</title>
 
 	<link rel="stylesheet" type="text/css" href="Facilities.css">
+  <link rel="shortcut icon" type="image/png" href="icon-hotel.png">
 
 </head>
 
@@ -16,7 +17,7 @@
 	<header>
 	  	    	<!-- nav bar and logo -->
 	  	    	    <nav class="navMain">
-	  	    	    	<img src="HF.png"  width="250px" height="100px" class="logo" alt="hlogo"> 
+	  	    	    	<a href="Home page.html"><img src="hotel-logo.png"  width="250px" height="100px" class="logo" alt="hlogo"></a> 
 
 	  	    	    	<label for="toggle" class="mbar">&#9776;</label>
 	  	    	    	<input type="checkbox" id="toggle"/>
@@ -59,7 +60,7 @@
       		</div>
            			<div class="box">
            					<div class="imgBox">
-           						<img src="gym.jpg">
+           						<img src="gym1.jpg" height="264">
            					</div>
            	
            						<div class="details">
@@ -81,7 +82,7 @@
 			</div>
                     <div class="box">
            					<div class="imgBox">
-           						<img src="pool1.jpg" height="264">
+           						<img src="pool.jpg" height="264">
            					</div>
            	
            						<div class="details">
