--- a/Home page.html
+++ b/Home page.html
@@ -28,6 +28,7 @@
 	  	    	    		<a href="#">Accomadation</a>
 	  	    	    		<a href="#">Hotel Reservation</a>
 	  	    	    		<a href="#">Registration</a>
+                    <a href="#">About Us</a>
 	  	    	    		<a href="#">Contact Us</a>    	    		
 	  	    	    	</div>		 	    	    	
 	  	    	    </nav>
@@ -35,7 +36,7 @@
            
             <div class="slideshow-container">
                    <div class="mySlides fade">
-                   	     <img src="slide1.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide1.jpg"> 	     
                    </div>
                    <div class="mySlides fade">
                    	     <img src="slide2.jpg" style="width: 1263px"> 	     
