--- a/Home page.html
+++ b/Home page.html
@@ -28,7 +28,7 @@
 	  	    	    		<a href="#">Accomadation</a>
 	  	    	    		<a href="#">Hotel Reservation</a>
 	  	    	    		<a href="#">Registration</a>
-                    <a href="#">About Us</a>
+                    <a href="About.html">About Us</a>
 	  	    	    		<a href="#">Contact Us</a>    	    		
 	  	    	    	</div>		 	    	    	
 	  	    	    </nav>
@@ -36,25 +36,25 @@
            
             <div class="slideshow-container">
                    <div class="mySlides fade">
-                   	     <img src="slide1.jpg"> 	     
+                   	     <img src="slide1.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide2.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide2.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide3.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide3.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide4.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide4.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide5.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide5.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide6.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide6.jpg" style="width: 100%"> 	     
                    </div>
                    <div class="mySlides fade">
-                   	     <img src="slide7.jpg" style="width: 1263px"> 	     
+                   	     <img src="slide7.jpg" style="width: 100%"> 	     
                    </div>
             </div>
         
