--- a/Updated Hotels/new/Bay.html
+++ b/Updated Hotels/new/Bay.html
@@ -17,21 +17,19 @@
                 <a href="Home page.html"><img src="hotel-logo.png"  width="250px" height="100px" class="logo" alt="hlogo"></a> 
                 <div class="menu">
                     <a href="#">Home</a>
-                    <div class="dropdown">
-                        <a href="#" class="menu">Hotels 
-                          <i class="fa fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown-content">
-                            <div><a href="#">Bay</a></div>
-                            <div><a href="#">Red</a></div>
-                        </div>
-                      </div>
-                    <a href="#">Facilities</a>
-                    <a href="#">Accomadation</a>
-                    <a href="#">Hotel Reservation</a>
-                    <a href="#">Registration</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Contact Us</a>    	    		
+  
+                        <select class="dropbox">
+                            <option id="HotelTab">Hotels  <i class='fa fa-caret-down'></i></option>
+                            <option> Bay</a></option>
+                            <option><a href="#">Red</a></option>
+                        </select>
+                    
+                        <a href="#">Facilities</a>
+                        <a href="#">Accomadation</a>
+                        <a href="#">Hotel Reservation</a>
+                        <a href="#">Registration</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Contact Us</a>    	    		
                 </div>		 	    	    	
             </nav>
             <div>
