Contact us and log in pages

--- a/Updated Hotels/Red.html
+++ b/Updated Hotels/Red.html
@@ -14,7 +14,7 @@
 <nav class="navMain">
     <a href="Home page.html"><img src="hotel-logo.png"  width="250px" height="100px" class="logo" alt="hlogo"></a> 
     <div class="menu">
-        <a class="active" href="Home page.html">Home</a>
+        <a ref="Home page.html">Home</a>
         <a href="Facilities.html">Facilities</a>
         <a href="#">Accomadation</a>
     <div class="dropD">
